nesc-frontend/src/test/resources/integration/programs/good/good05/C.nc
/* Correct parameters for a generic module. */

configuration C
{
}
implementation
{
   components new M(float*, "abc", 2);
}
