nesc-frontend/src/test/resources/integration/programs/bad/bad29/C.nc
/* Invalid type argument for a component (function type). */

configuration C
{
}
implementation
{
   components new M(void(int, long int));
}
